--- a/build.gradle
+++ b/build.gradle
@@ -20,22 +20,11 @@ apply plugin: 'sonar-runner'
 apply plugin: 'uptodate'
 apply plugin: 'com.moowork.node'
 
-ext.versionPrefix = "CD"
-ext.buildNrLoc = project.hasProperty('buildNr') ? "${buildNr}" : "000"
-ext.currentVersion = "${versionPrefix}-${buildNrLoc}"
-
-uploadArchives {
-    repositories.mavenDeployer {
-        repository(url: "http://nexus.microhackathon.pl/content/repositories/releases/") {
-            authentication(userName: 'deployment', password: 'deployment123')
-        }
-        pom.version = "${currentVersion}"
-        pom.artifactId = "gui"
-        pom.groupId = "pl.microhackaton"
-    }
-}
-
 ext {
+    versionPrefix = "CD"
+    buildNrLoc = project.hasProperty('buildNr') ? "${buildNr}" : "000"
+    currentVersion = "${versionPrefix}-${buildNrLoc}"
+    
     groovyVersion = '2.3.3'
     spockVersion = '0.7-groovy-2.0'
     springBootVersion = '1.1.3.RELEASE'
@@ -43,10 +32,22 @@ ext {
     aspectjVersion = '1.8.1'
     microDepsVersion = '0.3.1'
     hibernateVersion = '4.3.1.Final'
+    microDepsSpringVersion = '0.2.0'
 
-    stubRepositoryUrl = '' //TODO: fill this in
+    stubRepositoryUrl = 'http://nexus.microhackathon.pl/content/groups/public/'
     zookeeperPort = 2181
     zookeeperMockPort = 18081
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        repository(url: "http://nexus.microhackathon.pl/content/repositories/releases/") {
+            authentication(userName: 'deployment', password: 'deployment123')
+        }
+        pom.version = currentVersion
+        pom.artifactId = project.name
+        pom.groupId = "pl.microhackaton"
+    }
 }
 
 task addHashFile << {
@@ -58,8 +59,6 @@ task addHashFile << {
 
 jar {
     dependsOn addHashFile
-    baseName = '' //TODO: fill this in
-    version =  '0.1.0'
     from "commitHash.txt"
 }
 
@@ -93,16 +92,18 @@ dependencies {
     compile 'com.jayway.jsonpath:json-path-assert:0.9.1'
     compile 'org.yaml:snakeyaml:1.13'
     compile 'javax.validation:validation-api:1.1.0.Final'
-    compile 'org.hibernate:hibernate-validator:5.1.1.Final'
+    compile 'org.hibernate:hibernate-validator:5.1.2.Final'
     compile "org.hibernate:hibernate-core:$hibernateVersion"
     compile "org.hibernate:hibernate-entitymanager:$hibernateVersion"
     compile "org.aspectj:aspectjrt:$aspectjVersion"
-    compile("com.ofg:micro-deps-spring-config:0.0.2") {
+    compile 'org.apache.ivy:ivy:2.3.0'
+    compile "com.mangofactory:swagger-springmvc:0.8.4"
+    // microservices
+    compile("com.ofg:micro-deps-spring-config:$microDepsSpringVersion") {
         exclude group: 'org.slf4j'
         exclude group: 'log4j'
     }
-    compile 'org.apache.ivy:ivy:2.3.0'
-    compile "com.mangofactory:swagger-springmvc:0.8.4"
+    compile 'com.ofg:micro-infra-spring:0.0.2'    
 
     compile 'com.h2database:h2:1.4.179'
 
@@ -118,10 +119,14 @@ dependencies {
     testRuntime("org.spockframework:spock-spring:$spockVersion") {
         exclude group: 'org.spockframework', module: 'spock-core'
     }
-    testCompile 'org.springframework:spring-test:4.0.5.RELEASE'
-    testCompile 'com.github.tomakehurst:wiremock:1.46'
+    testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
+    testCompile 'com.github.tomakehurst:wiremock:1.47'
+    testCompile("com.ofg:micro-deps-spring-test-config:$microDepsSpringVersion") {
+        exclude group: 'org.slf4j'
+        exclude group: 'log4j'
+    }
 
-    mockDependencies 'com.ofg:micro-deps:0.3.1:fatJar'
+    mockDependencies 'com.ofg:micro-deps:0.5.0:fatJar'
 }
 
 tasks.withType(GroovyCompile) {
