--- a/build.gradle
+++ b/build.gradle
@@ -230,3 +230,8 @@ jar.dependsOn grunt
 
 // make sure fat jar is built before uploading
 uploadArchives.dependsOn build
+
+test {
+    //Workaround for the issue with Java 8u11 and 7u65 - http://www.infoq.com/news/2014/08/Java8-U11-Broke-Tools
+    jvmArgs '-noverify'
+}
