--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.4.RELEASE'
         classpath 'com.ofg:uptodate-gradle-plugin:0.0.5'
+		classpath 'com.ofg:micro-deps-gradle-plugin:0.0.1'
         if(project.hasProperty("coverage")) { classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:1.0.2' }
         classpath 'com.moowork.gradle:gradle-node-plugin:0.6'
     }
@@ -18,6 +19,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'maven'
 apply plugin: 'sonar-runner'
 apply plugin: 'uptodate'
+apply plugin: 'com.ofg.infrastructure.stubrunner'
 apply plugin: 'com.moowork.node'
 
 ext {
@@ -74,10 +76,6 @@ repositories {
     jcenter()
 }
 
-configurations {
-    mockDependencies
-}
-
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     compile "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
@@ -125,8 +123,6 @@ dependencies {
         exclude group: 'org.slf4j'
         exclude group: 'log4j'
     }
-
-    mockDependencies 'com.ofg:micro-deps:0.5.0:fatJar'
 }
 
 tasks.withType(GroovyCompile) {
@@ -182,17 +178,6 @@ if(project.hasProperty("coverage")) {
         }
     }
 
-}
-
-task runMocks << {
-    File microserviceMetadata = sourceSets.main.resources.find { it.name == 'microservice.json' }
-    String microDepsFatJar = configurations.mockDependencies.find { it.name.startsWith 'micro-deps' }
-    String runMocksCommand = "java -jar $microDepsFatJar -p $zookeeperPort -mp $zookeeperMockPort -f ${microserviceMetadata.absolutePath} -r $stubRepositoryUrl"
-    runMocksCommand.execute()
-}
-
-task stopMocks << {
-    "http://localhost:$zookeeperMockPort/stop".toURL().readLines()
 }
 
 def webDir = new File(projectDir, "src/main/web")
