--- a/src/main/web/bower.json
+++ b/src/main/web/bower.json
@@ -12,8 +12,7 @@
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
-    "angular-bootstrap": "0.11.0",
-    "angular-websocket": "~0.0.5"
+    "angular-bootstrap": "0.11.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
